// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render correctly 1`] = `
<DocumentFragment>
  <span
    class="button"
  />
</DocumentFragment>
`;

exports[`Button component should render link using \`href\` 1`] = `
<DocumentFragment>
  <a
    class="button"
    href="#"
    rel="noopener noreferrer"
    target="_blank"
  />
</DocumentFragment>
`;

exports[`Button component should render link using \`to\` 1`] = `
<DocumentFragment>
  <a
    class="button"
    href="#"
  />
</DocumentFragment>
`;
